force-app/main/default/objects/Product2/fields/Desarrollo_de_Costeo__c.field-meta.xml
<CustomField>
    <fullName>Desarrollo_de_Costeo__c</fullName>
    <label>Desarrollo de Costeo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>