force-app/main/default/objects/Product2/fields/Informaci_n_de_Levantamiento__c.field-meta.xml
<CustomField>
    <fullName>Informaci_n_de_Levantamiento__c</fullName>
    <label>Información de Levantamiento</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>