force-app/main/default/objects/Product2/fields/Linea__c.field-meta.xml
<CustomField>
    <fullName>Linea__c</fullName>
    <label>Línea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>