force-app/main/default/objects/Product2/fields/Memoria_Descriptiva__c.field-meta.xml
<CustomField>
    <fullName>Memoria_Descriptiva__c</fullName>
    <label>Memoria Descriptiva</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>