force-app/main/default/objects/Product2/fields/Plantilla_Inspeccion__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_Inspeccion__c</fullName>
    <description>Indica el nombre de la plantilla de inspección técnica que se debe disparar para este producto (ej. Bioenzimatico, Trampa_Grasa).</description>
    <inlineHelpText>Escriba el nombre exacto de la plantilla de inspección asociada.</inlineHelpText>
    <label>Plantilla de Inspección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>