force-app/main/default/objects/Product2/fields/SKU_Grupo_Liverpool_2__c.field-meta.xml
<CustomField>
    <fullName>SKU_Grupo_Liverpool_2__c</fullName>
    <label>SKU Grupo Liverpool 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>