force-app/main/default/objects/Product2/fields/Sublinea__c.field-meta.xml
<CustomField>
    <fullName>Sublinea__c</fullName>
    <label>Sublínea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>